[gd_scene load_steps=6 format=3 uid="uid://mgesb0krb0v7"]

[ext_resource type="Theme" uid="uid://cw5y2wo8afiyw" path="res://styles/letra.tres" id="1_txexu"]
[ext_resource type="Script" path="res://scripts/ajustes.gd" id="1_yfqt6"]
[ext_resource type="Texture2D" uid="uid://dh0x1ojbm4bx0" path="res://images/quit.png" id="2_yrlrc"]

[sub_resource type="Theme" id="Theme_6nymb"]
OptionButton/colors/font_color = Color(0.831373, 0.34902, 0.00784314, 1)

[sub_resource type="Theme" id="Theme_11s61"]
CheckButton/constants/check_v_offset = 0
CheckButton/font_sizes/font_size = 30

[node name="Ajustes" type="Popup"]
title = "Ajustes"
initial_position = 1
size = Vector2i(900, 520)
visible = true
content_scale_mode = 2
content_scale_aspect = 1
script = ExtResource("1_yfqt6")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.458824, 0.313726, 0.235294, 1)

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(0, -5)
size_flags_horizontal = 10
size_flags_vertical = 3

[node name="Video" type="TabBar" parent="TabContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
theme = ExtResource("1_txexu")
theme_override_font_sizes/font_size = 30

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Video"]
custom_minimum_size = Vector2(10, 10)
layout_direction = 2
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 590.0
offset_bottom = 290.0

[node name="ResolutionSettings" type="GridContainer" parent="TabContainer/Video/MarginContainer"]
layout_mode = 2
columns = 2

[node name="Pantalla" type="Label" parent="TabContainer/Video/MarginContainer/ResolutionSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_txexu")
text = "Modo de pantalla"

[node name="BtnPantalla" type="OptionButton" parent="TabContainer/Video/MarginContainer/ResolutionSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_6nymb")
item_count = 2
selected = 1
popup/item_0/text = "Modo ventana"
popup/item_0/id = 0
popup/item_1/text = "Pantalla completa"
popup/item_1/id = 1

[node name="FPS" type="Label" parent="TabContainer/Video/MarginContainer/ResolutionSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_txexu")
text = "Mostrar FPS"

[node name="BtnFPS" type="CheckButton" parent="TabContainer/Video/MarginContainer/ResolutionSettings"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_11s61")
button_pressed = true
alignment = 1
expand_icon = true
language = "es"

[node name="VSync" type="Label" parent="TabContainer/Video/MarginContainer/ResolutionSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_txexu")
text = "VSync"

[node name="BtnVsync" type="CheckButton" parent="TabContainer/Video/MarginContainer/ResolutionSettings"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_11s61")
button_pressed = true
alignment = 1
expand_icon = true
language = "es"

[node name="Audio" type="TabBar" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
theme = ExtResource("1_txexu")
theme_override_font_sizes/font_size = 30

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Audio"]
custom_minimum_size = Vector2(10, 10)
layout_direction = 2
layout_mode = 1
offset_left = 10.0
offset_top = 5.0
offset_right = 590.0
offset_bottom = 305.0

[node name="ResolutionSettings" type="GridContainer" parent="TabContainer/Audio/MarginContainer"]
layout_mode = 2
columns = 2

[node name="MasterVolume" type="Label" parent="TabContainer/Audio/MarginContainer/ResolutionSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("1_txexu")
text = "MasterVolume"

[node name="MasterVolumeContainer" type="HBoxContainer" parent="TabContainer/Audio/MarginContainer/ResolutionSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MasterSlider" type="HSlider" parent="TabContainer/Audio/MarginContainer/ResolutionSettings/MasterVolumeContainer"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[node name="MusicVolume" type="Label" parent="TabContainer/Audio/MarginContainer/ResolutionSettings"]
layout_mode = 2
theme = ExtResource("1_txexu")
text = "MusicVolume"

[node name="MusicVolumeContainer" type="HBoxContainer" parent="TabContainer/Audio/MarginContainer/ResolutionSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MusicSlider" type="HSlider" parent="TabContainer/Audio/MarginContainer/ResolutionSettings/MusicVolumeContainer"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[node name="SFXVolume" type="Label" parent="TabContainer/Audio/MarginContainer/ResolutionSettings"]
layout_mode = 2
theme = ExtResource("1_txexu")
text = "SFXVolume"

[node name="SFXVolumeContainer" type="HBoxContainer" parent="TabContainer/Audio/MarginContainer/ResolutionSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SFXSlider" type="HSlider" parent="TabContainer/Audio/MarginContainer/ResolutionSettings/SFXVolumeContainer"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[node name="Button" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -900.0
offset_right = -380.0
offset_bottom = 520.0
grow_horizontal = 0
scale = Vector2(0.09, 0.09)
pivot_offset = Vector2(920, 0)
size_flags_horizontal = 10
auto_translate = false
localize_numeral_system = false
icon = ExtResource("2_yrlrc")
flat = true
alignment = 0
icon_alignment = 2
vertical_icon_alignment = 0

[connection signal="item_selected" from="TabContainer/Video/MarginContainer/ResolutionSettings/BtnPantalla" to="." method="_on_btn_pantalla_item_selected"]
[connection signal="toggled" from="TabContainer/Video/MarginContainer/ResolutionSettings/BtnFPS" to="." method="_on_btn_fps_toggled"]
[connection signal="toggled" from="TabContainer/Video/MarginContainer/ResolutionSettings/BtnVsync" to="." method="_on_btn_vsync_toggled"]
[connection signal="value_changed" from="TabContainer/Audio/MarginContainer/ResolutionSettings/MasterVolumeContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/MarginContainer/ResolutionSettings/MusicVolumeContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/MarginContainer/ResolutionSettings/SFXVolumeContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
